# snakemake-executor-plugin-sge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: further.md  intro.md
snakemake_executor_plugin_sge/: __init__.py  job_cancellation.py  job_status_query.py  submit_string.py
tests/: test_parse_qsub_jobid.py  test_parser.py  test_submit_string.py
