[tool.poetry]
name = "snakemake-executor-plugin-sge"
version = "0.6.15"
description = "A Snakemake executor plugin for submitting jobs to SGE/UGE/OGS clusters."
authors = ["Stylianos Charalampous <stylianosc@github.com>"]
readme  = "README.md"
license = "MIT"
repository    = "https://github.com/stylianosc/snakemake-executor-plugin-sge"
keywords = ["snakemake", "plugin", "executor", "cluster", "sge", "uge", "gridengine"]

[tool.poetry.dependencies]
python                            = "^3.11"
snakemake-interface-common        = "^1.21.0"
snakemake-interface-executor-plugins = "^9.3.9"

[tool.poetry.group.dev.dependencies]
black  = "^23.7.0"
flake8 = "^6.1.0"
pytest = "^8.3.5"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
